--- a/python/examples/example_errors.ipynb
+++ b/python/examples/example_errors.ipynb
@@ -49,6 +49,8 @@
     "\n",
     "In the following, we will simulate models contained in the [PEtab Benchmark Collection](https://github.com/Benchmarking-Initiative/Benchmark-Models-PEtab/) to demonstrate a number of simulation failures to analyze and fix them. We use the PEtab format, as it makes model import and simulation much easier, but everything illustrated here, also applies to plain SBML or PySB import.\n",
     "\n",
+    "Note that, due to numerical issues, the examples below may not be fully reproducible on every system.\n",
+    "\n",
     "If any simulation failures occur, they will be printed via Python logging. \n",
     "\n",
     "Programmatically, simulation success can be checked via `ReturnDataView.status`. In case of a successful simulation, and only then, this value corresponds to `amici.AMICI_SUCCESS`.\n",
@@ -274,7 +276,7 @@
     "petab_problem = benchmark_models_petab.get_problem(\"Fujita_SciSignal2010\")\n",
     "amici_model = import_petab_problem(petab_problem, verbose=False)\n",
     "\n",
-    "np.random.seed(823)\n",
+    "np.random.seed(841)\n",
     "problem_parameters = dict(\n",
     "    zip(\n",
     "        petab_problem.x_free_ids,\n",
@@ -943,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51527745",
+   "id": "46eba4ca",
    "metadata": {},
    "outputs": [],
    "source": []
