--- a/python/examples/example_errors.ipynb
+++ b/python/examples/example_errors.ipynb
@@ -290,7 +290,7 @@
     "    scaled_parameters=True\n",
     ")\n",
     "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])\n",
-    "assert [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]] == ['AMICI_SUCCESS', 'AMICI_ERR_FAILURE', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS']"
+    "assert [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]] == ['AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_ERR_FAILURE', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS']"
    ]
   },
   {
@@ -300,7 +300,7 @@
    "source": [
     "**What happened?**\n",
     "\n",
-    "AMICI failed to integrate the forward problem. The problem occurred for only one simulation condition, `condition_step_00_3`. The issue occurred at $t = 7.69669$, where the error test failed.\n",
+    "AMICI failed to integrate the forward problem. The problem occurred for only one simulation condition, `condition_step_01_0`. The issue occurred at $t = 0.00603746$, where the error test failed.\n",
     "This means, the solver is unable to take a step of non-zero size without violating the choosen error tolerances."
    ]
   },
@@ -321,12 +321,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rdata = res[RDATAS][1]\n",
+    "rdata = res[RDATAS][2]\n",
     "\n",
     "# Show Jacobian as heatmap\n",
     "plot_jacobian(rdata)\n",
     "\n",
-    "print(f\"largest absolute Jacobian value: {np.max(np.abs(rdata.J)):.3g}\")\n"
+    "print(f\"largest absolute Jacobian value: {np.max(np.abs(rdata.J)):.3g}\")"
    ]
   },
   {
@@ -348,7 +348,7 @@
    "source": [
     "# set stricter relative error tolerance\n",
     "amici_solver = amici_model.getSolver()\n",
-    "amici_solver.setRelativeTolerance(amici_solver.getRelativeTolerance() / 100)\n",
+    "amici_solver.setRelativeTolerance(amici_solver.getRelativeTolerance() / 1000)\n",
     "\n",
     "res = simulate_petab(\n",
     "    petab_problem=petab_problem, \n",
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46eba4ca",
+   "id": "884bc188",
    "metadata": {},
    "outputs": [],
    "source": []
