Apply suggestions from code review
Co-authored-by: Fabian Fröhlich <fabian@schaluck.com>

--- a/python/examples/example_errors.ipynb
+++ b/python/examples/example_errors.ipynb
@@ -503,7 +503,7 @@
     "Always look for the most basic (furthest up) model quantities.\n",
     "In cases where there non-finite values occur in expressions further down, rerunning the simulation after calling `Model.setAlwaysCheckFinite(True)` may give some further hints on where the issue originates.\n",
     "\n",
-    "The `NaN` in $w$ occurred for `flux_v7_v_6` (see error log), i.e. when computing the reaction flux for reaction `v7_v_6`. As $w$ only depends on $(t, p, k, x)$ and no non-finite values have been reported for those, the issue has to be in the respective flux equation.\n",
+    "The `NaN` in $w$ occurred for `flux_v7_v_6` (see error log), i.e., when computing the reaction flux for reaction `v7_v_6`. As $w$ only depends on $(t, p, k, x)$ and no non-finite values have been reported for those, the issue has to be in the respective flux equation.\n",
     "\n",
     "Let's look at that expression. This can either be done by inspecting the underlying SBML model (e.g., using COPASI), or by checking the generated model code:"
    ]
@@ -602,8 +602,8 @@
    "id": "6616c2ff",
    "metadata": {},
    "source": [
-    "Indeed... No way we can fix this for the given model.\n",
-    "This was most likely a very unrealistic parameter value, originating from a too high upper parameter bound for `n_par`.\n",
+    "Indeed, no way we can fix this for the given model.\n",
+    "This was most likely an unrealistic parameter value, originating from a too high upper parameter bound for `n_par`.\n",
     "Therefore, if this error occurs during optimization, a first step could be adapting the respective parameter bounds.\n",
     "In other cases, this may be a result of unfortunate arrangement of model expressions, which can sometimes be solved by passing a suitable simplification function to the model import."
    ]
@@ -689,11 +689,11 @@
    "id": "da131d3e",
    "metadata": {},
    "source": [
-    "Indeed, the condition number shows that the Jacobian is numerically singular. This is usually the result of conserved quantities in the model.\n",
+    "Indeed, the condition number shows that the Jacobian is numerically singular. If this happens consistently, it is usually due to conserved quantities in the model.\n",
     "\n",
     "There are two ways we can address that:\n",
     "\n",
-    "1. Use numerical integration to compute sensitivities, for which a singular Jacobian is not an issue. This is usually slower, though.\n",
+    "1. Use numerical integration to compute sensitivities, for which a singular Jacobian is not an issue. This is, usually, slower, though.\n",
     "2. Remove any conserved quantities.\n",
     "\n",
     "Let's try both approaches:"
@@ -804,7 +804,7 @@
    "source": [
     "**What happened?**\n",
     "\n",
-    "All given experimental conditions require pre-equilibration, i.e. finding a steady state. AMICI first tries find a steady state using the Newton solver, if that fails, it tries simulating until steady state, if that also failes, it tries the Newton solver from the end of the simulation. In this case, all three failed. Neither Newton's method nor simulation yielded a steadystate satisfying the required tolerances.\n",
+    "All given experimental conditions require pre-equilibration, i.e., finding a steady state. AMICI first tries find a steady state using the Newton solver, if that fails, it tries simulating until steady state, if that also failes, it tries the Newton solver from the end of the simulation. In this case, all three failed. Neither Newton's method nor simulation yielded a steadystate satisfying the required tolerances.\n",
     "\n",
     "This can also be seen in `ReturnDataView.preeq_status` (the three statuses corresponds to Newton \\#1, Simulation, Newton \\#2):"
    ]
