--- a/python/examples/example_errors.ipynb
+++ b/python/examples/example_errors.ipynb
@@ -276,7 +276,7 @@
     "petab_problem = benchmark_models_petab.get_problem(\"Fujita_SciSignal2010\")\n",
     "amici_model = import_petab_problem(petab_problem, verbose=False)\n",
     "\n",
-    "np.random.seed(1185)\n",
+    "np.random.seed(1518)\n",
     "problem_parameters = dict(\n",
     "    zip(\n",
     "        petab_problem.x_free_ids,\n",
@@ -290,7 +290,7 @@
     "    scaled_parameters=True\n",
     ")\n",
     "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])\n",
-    "assert [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]] == ['AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_ERR_FAILURE', 'AMICI_SUCCESS', 'AMICI_SUCCESS']"
+    "assert [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]] == ['AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_ERR_FAILURE', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS']"
    ]
   },
   {
@@ -321,7 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rdata = res[RDATAS][3]\n",
+    "rdata = res[RDATAS][2]\n",
     "\n",
     "# Show Jacobian as heatmap\n",
     "plot_jacobian(rdata)\n",
@@ -348,7 +348,7 @@
    "source": [
     "# set stricter relative error tolerance\n",
     "amici_solver = amici_model.getSolver()\n",
-    "amici_solver.setRelativeTolerance(amici_solver.getRelativeTolerance() / 100)\n",
+    "amici_solver.setRelativeTolerance(amici_solver.getRelativeTolerance() / 10)\n",
     "\n",
     "res = simulate_petab(\n",
     "    petab_problem=petab_problem, \n",
