--- a/python/examples/example_errors.ipynb
+++ b/python/examples/example_errors.ipynb
@@ -275,22 +275,26 @@
    "source": [
     "petab_problem = benchmark_models_petab.get_problem(\"Fujita_SciSignal2010\")\n",
     "amici_model = import_petab_problem(petab_problem, verbose=False)\n",
-    "\n",
-    "np.random.seed(1518)\n",
-    "problem_parameters = dict(\n",
-    "    zip(\n",
-    "        petab_problem.x_free_ids,\n",
-    "        petab_problem.sample_parameter_startpoints(n_starts=1)[0],\n",
+    "res = {}\n",
+    "for s in (4920, 5854, 5952, 5965, 6581):\n",
+    "    np.random.seed(s)\n",
+    "    problem_parameters = dict(\n",
+    "        zip(\n",
+    "            petab_problem.x_free_ids,\n",
+    "            petab_problem.sample_parameter_startpoints(n_starts=1)[0],\n",
+    "        )\n",
     "    )\n",
-    ")\n",
-    "res = simulate_petab(\n",
-    "    petab_problem=petab_problem, \n",
-    "    amici_model=amici_model,\n",
-    "    problem_parameters=problem_parameters,\n",
-    "    scaled_parameters=True\n",
-    ")\n",
-    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])\n",
-    "assert [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]] == ['AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_ERR_FAILURE', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS']"
+    "    res = simulate_petab(\n",
+    "        petab_problem=petab_problem, \n",
+    "        amici_model=amici_model,\n",
+    "        problem_parameters=problem_parameters,\n",
+    "        scaled_parameters=True\n",
+    "    )\n",
+    "    print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])\n",
+    "    res[s] = [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]]:\n",
+    "\n",
+    "raise ValueError(s)\n",
+    "# assert [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]] == ['AMICI_SUCCESS', 'AMICI_ERR_FAILURE', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS']"
    ]
   },
   {
