--- a/python/examples/example_errors.ipynb
+++ b/python/examples/example_errors.ipynb
@@ -275,26 +275,23 @@
    "source": [
     "petab_problem = benchmark_models_petab.get_problem(\"Fujita_SciSignal2010\")\n",
     "amici_model = import_petab_problem(petab_problem, verbose=False)\n",
-    "res = {}\n",
-    "for s in (4920, 5854, 5952, 5965, 6581):\n",
-    "    np.random.seed(s)\n",
-    "    problem_parameters = dict(\n",
-    "        zip(\n",
-    "            petab_problem.x_free_ids,\n",
-    "            petab_problem.sample_parameter_startpoints(n_starts=1)[0],\n",
-    "        )\n",
-    "    )\n",
-    "    res = simulate_petab(\n",
-    "        petab_problem=petab_problem, \n",
-    "        amici_model=amici_model,\n",
-    "        problem_parameters=problem_parameters,\n",
-    "        scaled_parameters=True\n",
-    "    )\n",
-    "    print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])\n",
-    "    res[s] = [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]]:\n",
     "\n",
-    "raise ValueError(s)\n",
-    "# assert [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]] == ['AMICI_SUCCESS', 'AMICI_ERR_FAILURE', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS']"
+    "np.random.seed(4920)\n",
+    "problem_parameters = dict(\n",
+    "    zip(\n",
+    "        petab_problem.x_free_ids,\n",
+    "        petab_problem.sample_parameter_startpoints(n_starts=1)[0],\n",
+    "    )\n",
+    ")\n",
+    "res = simulate_petab(\n",
+    "    petab_problem=petab_problem, \n",
+    "    amici_model=amici_model,\n",
+    "    problem_parameters=problem_parameters,\n",
+    "    scaled_parameters=True\n",
+    ")\n",
+    "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])\n",
+    "\n",
+    "assert [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]] == ['AMICI_SUCCESS', 'AMICI_ERR_FAILURE', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS']"
    ]
   },
   {
@@ -304,7 +301,7 @@
    "source": [
     "**What happened?**\n",
     "\n",
-    "AMICI failed to integrate the forward problem. The problem occurred for only one simulation condition, `condition_step_01_0`. The issue occurred at $t = 0.00603746$, where the error test failed.\n",
+    "AMICI failed to integrate the forward problem. The problem occurred for only one simulation condition, `condition_step_00_3`. The issue occurred at $t = 429.232$, where the error test failed.\n",
     "This means, the solver is unable to take a step of non-zero size without violating the choosen error tolerances."
    ]
   },
@@ -325,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rdata = res[RDATAS][2]\n",
+    "rdata = res[RDATAS][1]\n",
     "\n",
     "# Show Jacobian as heatmap\n",
     "plot_jacobian(rdata)\n",
