--- a/python/examples/example_errors.ipynb
+++ b/python/examples/example_errors.ipynb
@@ -634,7 +634,7 @@
     "amici_model = import_petab_problem(\n",
     "    petab_problem, \n",
     "    verbose=False,\n",
-    "    force_compile=True,\n",
+    "    #force_compile=True,\n",
     "    model_name=\"Blasi_CellSystems2016_1\"\n",
     ")\n",
     "\n",
@@ -642,7 +642,7 @@
     "amici_solver.setSensitivityMethod(amici.SensitivityMethod.forward)\n",
     "amici_solver.setSensitivityOrder(amici.SensitivityOrder.first)\n",
     "\n",
-    "np.random.seed(150)\n",
+    "np.random.seed(194)\n",
     "problem_parameters = dict(\n",
     "    zip(\n",
     "        petab_problem.x_free_ids,\n",
@@ -735,7 +735,8 @@
     "amici_model = import_petab_problem(\n",
     "    petab_problem, \n",
     "    verbose=False,\n",
-    "    force_compile=True,\n",
+    "    # we need a different model name if we import the model again\n",
+    "    # we cannot load a model with the same name as an already loaded model\n",
     "    model_name=\"Blasi_CellSystems2016_2\"\n",
     ")\n",
     "del os.environ[\"AMICI_EXPERIMENTAL_SBML_NONCONST_CLS\"]\n",
