--- a/python/examples/example_errors.ipynb
+++ b/python/examples/example_errors.ipynb
@@ -737,7 +737,7 @@
     "    verbose=False,\n",
     "    # we need a different model name if we import the model again\n",
     "    # we cannot load a model with the same name as an already loaded model\n",
-    "    model_name=\"Blasi_CellSystems2016_2\"\n",
+    "    model_name=\"Blasi_CellSystems2016_2\",\n",
     "    force_compile=True,\n",
     ")\n",
     "del os.environ[\"AMICI_EXPERIMENTAL_SBML_NONCONST_CLS\"]\n",
