--- a/python/examples/example_errors.ipynb
+++ b/python/examples/example_errors.ipynb
@@ -848,9 +848,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Reduce relative tolerance for integration by a factor of ten\n",
+    "# Reduce relative tolerance for integration\n",
     "amici_solver = amici_model.getSolver()\n",
-    "amici_solver.setRelativeTolerance(1/10 * amici_solver.getRelativeTolerance())\n",
+    "amici_solver.setRelativeTolerance(1/100 * amici_solver.getRelativeTolerance())\n",
     "\n",
     "res = simulate_petab(\n",
     "    petab_problem=petab_problem, \n",
