--- a/python/examples/example_errors.ipynb
+++ b/python/examples/example_errors.ipynb
@@ -782,20 +782,25 @@
     "\n",
     "amici_solver = amici_model.getSolver()\n",
     "\n",
-    "np.random.seed(5839)\n",
-    "problem_parameters = dict(\n",
-    "    zip(\n",
-    "        petab_problem.x_free_ids,\n",
-    "        petab_problem.sample_parameter_startpoints(n_starts=1)[0],\n",
+    "# occurrence of this error seems to be quite system-dependent... \n",
+    "for seed in (1851, 1879, 5839):\n",
+    "    np.random.seed(seed)\n",
+    "    problem_parameters = dict(\n",
+    "        zip(\n",
+    "            petab_problem.x_free_ids,\n",
+    "            petab_problem.sample_parameter_startpoints(n_starts=1)[0],\n",
+    "        )\n",
     "    )\n",
-    ")\n",
-    "res = simulate_petab(\n",
-    "    petab_problem=petab_problem, \n",
-    "    amici_model=amici_model,\n",
-    "    problem_parameters=problem_parameters,\n",
-    "    scaled_parameters=True,\n",
-    "    solver=amici_solver,\n",
-    ")\n",
+    "    res = simulate_petab(\n",
+    "        petab_problem=petab_problem, \n",
+    "        amici_model=amici_model,\n",
+    "        problem_parameters=problem_parameters,\n",
+    "        scaled_parameters=True,\n",
+    "        solver=amici_solver,\n",
+    "    )\n",
+    "    if any(rdata.status != amici.AMICI_SUCCESS for rdata in res[RDATAS]):\n",
+    "        break\n",
+    "        \n",
     "print(\"Status:\", [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]])\n",
     "assert [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]] == ['AMICI_ERROR', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS', 'AMICI_SUCCESS']"
    ]
