--- a/python/examples/example_errors.ipynb
+++ b/python/examples/example_errors.ipynb
@@ -783,7 +783,7 @@
     "amici_solver = amici_model.getSolver()\n",
     "\n",
     "# occurrence of this error seems to be quite system-dependent... \n",
-    "for seed in (1851, 1879, 5839):\n",
+    "for seed in (1851, 5839):\n",
     "    np.random.seed(seed)\n",
     "    problem_parameters = dict(\n",
     "        zip(\n",
