--- a/python/examples/example_large_models/example_performance_optimization.ipynb
+++ b/python/examples/example_large_models/example_performance_optimization.ipynb
@@ -378,9 +378,9 @@
     "petab_yaml=\"https://raw.githubusercontent.com/Benchmarking-Initiative/Benchmark-Models-PEtab/master/Benchmark-Models/Chen_MSB2009/Chen_MSB2009.yaml\"\n",
     "amici_import_petab -y \"${petab_yaml}\" --no-compile\n",
     "cd Chen_MSB2009-amici0.16.0/\n",
-    "for O in \"-O0\" \"-O1\" \"-O2\" \"-O3\" \"-O3 -march=native\"\n",
+    "for cflags in \"-O0\" \"-O1\" \"-O2\" \"-O3\" \"-O3 -march=native\"\n",
     "    # this line only builds the model extension, and is normally performed automatically during import\n",
-    "    do AMICI_PARALLEL_COMPILE=1 AMICI_CXXFLAGS=-O${O} /usr/bin/time -v python setup.py build_ext --force --build-lib .\n",
+    "    do AMICI_PARALLEL_COMPILE=1 AMICI_CXXFLAGS=${cflags} /usr/bin/time -v python setup.py build_ext --force --build-lib .\n",
     "done\n",
     "```"
    ]
