--- a/python/examples/example_large_models/example_performance_optimization.ipynb
+++ b/python/examples/example_large_models/example_performance_optimization.ipynb
@@ -464,7 +464,7 @@
     "\n",
     "### Adjoint *vs.* forward sensivities\n",
     "\n",
-    "If only the objective function gradient is required, adjoint sensitivity analysis are often preferable over forward sensitivity analysis. As a rule of thumb, adjoint sensitivity analysis seem to outperform forward sensitivity analysis for models with more than 20 parameters:\n",
+    "If only the objective function gradient is required, adjoint sensitivity analysis are often preferable over forward sensitivity analysis. As a rule of thumb, adjoint sensitivity analysis seems to outperform forward sensitivity analysis for models with more than 20 parameters:\n",
     "\n",
     "![](https://journals.plos.org/ploscompbiol/article/figure/image?size=medium&id=10.1371/journal.pcbi.1005331.g002)\n",
     "\n",
