fix sphinx link

--- a/python/examples/example_large_models/example_performance_optimization.ipynb
+++ b/python/examples/example_large_models/example_performance_optimization.ipynb
@@ -468,7 +468,7 @@
     "\n",
     "![](https://journals.plos.org/ploscompbiol/article/figure/image?size=medium&id=10.1371/journal.pcbi.1005331.g002)\n",
     "\n",
-    "*CC BY 4.0 Fröhlich et al., https://doi.org/10.1371/journal.pcbi.1005331*\n",
+    "*CC BY 4.0 Fröhlich et al., [DOI:10.1371/journal.pcbi.1005331](https://doi.org/10.1371/journal.pcbi.1005331)*\n",
     "\n",
     "### Sensitivities w.r.t. a subset of parameters\n",
     "\n",
