move notebook and add to doc

--- a/python/examples/example_jax/ExampleJax.ipynb
+++ b/python/examples/example_jax/ExampleJax.ipynb
@@ -809,43 +809,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "48451b0e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'llh': -138.22199662450979,\n",
-       " 'sllh': {'Epo_degradation_BaF3': -0.022031291993031152,\n",
-       "  'k_exp_hetero': -0.05532275416950131,\n",
-       "  'k_exp_homo': -0.005787886630252937,\n",
-       "  'k_imp_hetero': -0.005400220655104336,\n",
-       "  'k_imp_homo': 4.515958094583564e-05,\n",
-       "  'k_phos': -0.007914030504748332,\n",
-       "  'sd_pSTAT5A_rel': -0.010783057977445385,\n",
-       "  'sd_pSTAT5B_rel': -0.02403937268176315,\n",
-       "  'sd_rSTAT5A_rel': -0.019192198115317298},\n",
-       " 'rdatas': [<ReturnDataView(<amici.amici.ReturnData; proxy of <Swig Object of type 'amici::ReturnData *' at 0x2887b82a0> >)>]}"
+       "{'Epo_degradation_BaF3': -0.022031291993031152,\n",
+       " 'k_exp_hetero': -0.05532275416950131,\n",
+       " 'k_exp_homo': -0.005787886630252937,\n",
+       " 'k_imp_hetero': -0.005400220655104336,\n",
+       " 'k_imp_homo': 4.515958094583564e-05,\n",
+       " 'k_phos': -0.007914030504748332,\n",
+       " 'sd_pSTAT5A_rel': -0.010783057977445385,\n",
+       " 'sd_pSTAT5B_rel': -0.02403937268176315,\n",
+       " 'sd_rSTAT5A_rel': -0.019192198115317298}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "simulate_petab(petab_problem, amici_model, solver=amici_solver)"
+    "simulate_petab(petab_problem, amici_model, solver=amici_solver)['sllh']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f93e33b4",
+   "execution_count": 25,
+   "id": "7b905f77",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-138.22199662450979"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "amici.SensitivityOrder(amici_solver.getSensitivityOrder())"
+    "simulate_petab(petab_problem, amici_model, solver=amici_solver)['llh']"
    ]
   },
   {
@@ -880,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f02b4743",
+   "id": "23352a1b",
    "metadata": {},
    "outputs": [],
    "source": []
