remove model prefix

--- a/python/examples/example_errors.ipynb
+++ b/python/examples/example_errors.ipynb
@@ -516,12 +516,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model name and source code location\n",
-    "model_name = amici_model.module.__package__\n",
+    "# model source code location\n",
     "model_src_dir = Path(amici_model.module.__file__).parents[1]\n",
     "\n",
     "# find the problematic expression in the model source code\n",
-    "!grep flux_v7_v_6 {model_src_dir}/{model_name}_w.cpp"
+    "!grep flux_v7_v_6 {model_src_dir}/w.cpp"
    ]
   },
   {
