Update example_performance_optimization - `simplify`

--- a/python/examples/example_large_models/example_performance_optimization.ipynb
+++ b/python/examples/example_large_models/example_performance_optimization.ipynb
@@ -228,6 +228,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6b938781",
+   "metadata": {},
+   "source": [
+    "#### (No) simplification of model expressions\n",
+    "\n",
+    "By default, AMICI will try to perform some basic simplification of model expressions. For complex model expressions, or for large models, this can become costly. It very much depends on the model expressions, whether the benefits outweigh the cost."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c32065a1",
    "metadata": {},
    "source": [
@@ -522,7 +532,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
