add spline notebooks to documentation

--- a/binder/overview.ipynb
+++ b/binder/overview.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f7ebed12-4309-4c92-a54e-da80ccd2d5e7",
    "metadata": {},
@@ -29,7 +30,15 @@
     "\n",
     "* [Simulation errors](../python/examples/example_errors.ipynb)\n",
     "\n",
-    "  Demonstrates common simulation failures and gives some hints for interpreting, debugging, and fixing them.\n"
+    "  Demonstrates common simulation failures and gives some hints for interpreting, debugging, and fixing them.\n",
+    "\n",
+    "* [Efficient spline interpolation](../python/examples/example_splines/ExampleSplines.ipynb)\n",
+    "\n",
+    "  Shows how to add annotated spline formulas to existing SBML models in order to speed up AMICI's model import.\n",
+    "\n",
+    "* [A real-world application of splines](../python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb)\n",
+    "\n",
+    "  An illustration of how to apply AMICI's spline functionalities to parameter estimation for a reaction network.\n"
    ]
   }
  ],
